--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/Project06/TestPackage/YourTest.java=UTF-8
 encoding//src/Projects_01/totalLetterCountCheck.java=UTF-8
+encoding//src/Projects_05/Laptop/Data.java=UTF-8
